Simpler intput
